[package]
name = "grammar"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "grammar"
path = "src/main/mod.rs"

[dependencies]
atty = "0.2.14"
clap = { version = "3.1.10", features = ["cargo"] }

[dev-dependencies]
regex = "1.5.4"
